--- a/simple_calc/Makefile
+++ b/simple_calc/Makefile
@@ -1,26 +1,32 @@
 TARGET = simple_calc
 OBJS = simple_calc.o
 SRCS = simple_calc.c
-LIBRARY = libbinaty_op.a libstack_op.a
+
+LIBRARYS := \
+	-lbinary_tree_op 	\
+	-lstack_op
 
 INCLUDES_DIR := \
 	-I. 	\
-	-I(../binary_tree/) 	\
-	-I(../stack/)
+	-I../binary_tree/ 	\
+	-I../stack/
 LIBS_DIR := \
 	-L. 	\
-	-L(../binary_tree/) 	\
-	-L(../stack/)
+	-L../binary_tree/ 	\
+	-L../stack/
 
 CFLAGS = -c $(INCLUDES_DIR)
-LDFLAGS = $(LIBRARY)
+LDFLAGS = \
+	  $(LIBS_DIR) 	\
+	  $(LIBRARYS) 
+
 CC = gcc
 
 $(TARGET):$(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $^
 $(OBJS):$(SRCS)
-	$(CC) $(CFLAGS) -o $@
+	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
-	#rm -rf $(OBJS)
+	rm -rf $(OBJS)
 
